--- a/style.css
+++ b/style.css
@@ -115,10 +115,10 @@
 
 
 .dashboard{
-    position: absolute;
-    top: 20%;
+    /* position: absolute;
+    bottom: 20%; */
     height:60%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color:red;
+    /* left: 50%; */
+    /* transform: translate(-50%,-50%); */
+    /* background-color:red; */
 }
