--- a/style.css
+++ b/style.css
@@ -103,7 +103,14 @@
     padding: 15px 20px;
     font-weight: bold;
 }
-
+.drugOpt{
+    margin: 10px;
+    padding:10px;
+    color:white;
+    background: rgba(0,0,0,0.6);
+    border-radius: 10px;
+    display:flex;
+}
 .aSearchTag{
     width:fit-content;
     margin: 3px;
@@ -128,7 +135,12 @@
     position: absolute;
 }
 
+body{
+    overflow: hidden;
+}
+
 .dashboard{
+    display:flex;
     opacity:0;
     position: relative;
     height:80%;
@@ -137,4 +149,26 @@
     transform: translate(-50%,-50%);
     background-color:green;
     z-index: -1;
+}
+
+.drugBoard{
+    width:20%;
+    height:100%;
+    background-color: red;
+}
+
+.graphPannel{
+    width:55%;
+    height:100%;
+    background-color: blue;
+}
+
+.NLPPannel{
+    width:25%;
+    height:100%;
+    background-color: red;
+}
+
+.drugList{
+
 }
