--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     /* background-color:green; */
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .drugBoard{
