--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@
 
 body{
     overflow: hidden;
+    background-color: #F0E7D8;
 }
 
 .dashboard{
@@ -153,20 +154,32 @@ body{
 
 .drugBoard{
     width:20%;
-    height:100%;
-    background-color: blue;
+    height:99%;
+    
+    margin-left: 5px;
+}
+
+.drugBoard,.NLPPannel{
+    background-color: #B00020;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    border-radius: 10px;
+}
+.drugBoard:hover,.NLPPannel:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .graphPannel{
     width:55%;
     height:100%;
     /* background-color: grey; */
+    /* z-index: 9; */
 }
 
 .NLPPannel{
     width:25%;
     height:100%;
-    background-color: blue;
+    /* z-index: 100; */
 }
 
 .bar_rect{
@@ -191,4 +204,17 @@ svg {
  
   .y .tick line {
     stroke: #ddd;
+  }
+
+  .loadingScreen{
+      z-index: 1000;
+      position: absolute;
+      opacity: 0.7;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      background-image: url('assets/loading.gif');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
   }
