--- a/style.css
+++ b/style.css
@@ -153,9 +153,7 @@ body{
 }
 
 .drugBoard{
-    width:20%;
-    height:99%;
-    
+    width:20%;    
     margin-left: 5px;
 }
 
@@ -163,7 +161,8 @@ body{
     background-color: #B00020;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    border-radius: 10px;
+    border-radius: 5px;
+    height:99%;
 }
 .drugBoard:hover,.NLPPannel:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -178,7 +177,7 @@ body{
 
 .NLPPannel{
     width:25%;
-    height:100%;
+    margin-right: 5px;
     /* z-index: 100; */
 }
 
