--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@
     margin: 10px;
     padding:10px;
     color:white;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0);
+    opacity:0.6;
     border-radius: 10px;
     display:flex;
 }
@@ -157,6 +158,14 @@ body{
     text-align: center;
     color: white;
 }
+.boardSubtitle{
+    padding: 2%;
+    font-size: 0.9em;
+
+    text-align: center;
+    color: white;
+}
+
 .pannelText{
     padding: 5%;
     font-size: 0.9em;
@@ -246,8 +255,11 @@ svg {
 }
 
 .bottomNLP{
+    border-style: none none none solid;
+    border-width: 4px;
+    border-color: blue;
     width:100%;
     height:33%;
-    border-radius: inherit;
+    border-radius: 0px 0px 0px 5px;
     /* background-color:blue; */
 }
