--- a/style.css
+++ b/style.css
@@ -174,7 +174,10 @@ body{
 }
 
 .drugBoard{
-    
+    border-style: none solid none none;
+    border-width: 4px;
+    border-color: rgb(103, 8, 167);
+
     width:20%;    
     margin-left: 5px;
 }
