--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ svg {
 .topNLP{
     width:100%;
     height:33%;
+    padding:4%;
     /* background-color:blue; */
     border-radius: inherit;
 }
