--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ svg {
     fill: none;
     stroke: #000;
   }
- 
+
   path.domain {
     stroke: none;
   }
@@ -243,15 +243,22 @@ svg {
       background-position: center;
   }
 
+  .topNLP,.midNLP,.bottomNLP{
+    border-style: none none none solid;
+    border-width: 4px;
+  }
 .topNLP{
+    border-color: blue;
     width:100%;
     height:33%;
     padding:4%;
     /* background-color:blue; */
     border-radius: inherit;
+    /* border-radius: 5px 0px 0px 0px; */
 }
 
 .midNLP{
+    border-color: rgb(58, 29, 112);
     width:100%;
     height:34%;
     border-radius: inherit;
