--- a/style.css
+++ b/style.css
@@ -154,6 +154,13 @@ body{
     /* z-index: -1; */
 }
 
+.graphTitle{
+    font-size: 1.5em;
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+}
+
 .boardTitle{
     padding: 5%;
     text-align: center;
@@ -194,9 +201,21 @@ body{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.graphPannel{
+.graphHolder{
     width:55%;
-    height:100%;
+    display: block;
+}
+
+.graphPannelTitle{
+    width:100%;
+    height:5%;
+    /* background-color: blue; */
+
+    
+}
+.graphPannel{
+    width:100%;
+    height:95%;
     /* background-color: grey; */
     /* z-index: 9; */
 }
@@ -249,7 +268,7 @@ svg {
     border-width: 4px;
   }
 
-  .topNLPHeader,.topNLPHeader,.topNLPHeader{
+  .topNLPHeader,.midNLPHeader,.bottomNLPHeader,.topNLPConHeader{
     width:100%;
     height:5%;
   }
